<?xml version="1.0"?>
<package>
  <name>laser_scan_to_map</name>
  <version>0.1.0</version>
  <description>creates obstacle map from laser scan</description>

  <maintainer email="ortslil64@gmail.com">Or Tslil</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
</package>
